--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
-    "rootDirs": [
-      "src",
-      "tests"
-    ],
+    "rootDirs": ["src", "tests"],
     "baseUrl": "src",
     "paths": {
-      "@/*": [
-        "*"
-      ]
+      "@/*": ["*"]
     },
     "plugins": [
       {
@@ -23,8 +18,6 @@
       }
     ]
   },
-  "include": [
-    "src",
-    "tests"
-  ]
+  "include": ["src", "tests"],
+  "ts-node": { "esm": true }
 }
